[IMP] account_*: add late payment charges facility
With this commit late payment charge option is provided in payment terms.
Penalties can be applied to both the total or taxable amounts. Seven different
ways are provided for calculating penalties:

1) Monthly      : Penalty is calculated at the given rate for each month from
                  due date to payment date.
2) Quarterly    : Penalty is calculated at the given rate for each fiscal
                  quarter from due date to payment date.
3) Half-Yearly  : Penalty is calculated at the given rate for each fiscal
                  half-year from due date to payment date.
4) Yearly       : Penalty is calculated at the given rate for each fiscal year
                  from due date to payment date.
5) Fixed        : A fixed penalty is charged at the given rate regardless of the
                  payment date.
6) Flat         : A flat amount is charged as a penalty.
7) Flat per Inst: A flat amount is charged as a penalty per installment.

Late charges are applied if an invoice/bill is overdue. A new debit note is
created with a late payment charges product and its corresponding penalty amount
in draft state, referring to its parent invoice/bill. The late payment charges
product is created when a late penalty is applied for the first time in a
database.

task-3774599

--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -826,6 +826,12 @@
                                         <span class="o_stat_text">Cash Basis Entries</span>
                                     </div>
                             </button>
+                            <button type="object" class="oe_stat_button" name="action_view_lpc_notes" icon="fa-plus" invisible="lpc_note_sum == 0">
+                                <div class="o_field_widget o_stat_info">
+                                    <span class="o_stat_value"><field name="lpc_note_sum"/></span>
+                                    <span class="o_stat_text">Late Pay Charges</span>
+                                </div>
+                            </button>
                         </div>
 
                         <!-- Payment status for invoices / receipts -->
