--- a/addons/account/views/res_config_settings_views.xml
+++ b/addons/account/views/res_config_settings_views.xml
@@ -311,6 +311,18 @@
                                         </div>
                                     </div>
                                 </setting>
+                                <setting string="Post Late Pay Charges in:">
+                                    <div class="content-group">
+                                        <div class="row mt8">
+                                            <label for="account_journal_late_pay_charges_income_account_id" class="col-lg-5 o_light_label"/>
+                                            <field name="account_journal_late_pay_charges_income_account_id"/>
+                                        </div>
+                                        <div class="row mt8">
+                                            <label for="account_journal_late_pay_charges_expense_account_id" class="col-lg-5 o_light_label"/>
+                                            <field name="account_journal_late_pay_charges_expense_account_id"/>
+                                        </div>
+                                    </div>
+                                </setting>
                             </block>
                         </t>
 
