[IMP] survey: add language selector
We add a language selector in the first page of the survey allowing users to
select their language. This selector is only present if more than one language
is enabled on the survey and it is removed once the survey begins.

The survey form allows the creator of a survey to configure the available
languages among the installed ones. By default, the context language is
enabled. If no language is selected for the survey, it means that the survey
supports all installed languages. As the demo surveys support multiple
language, we left that field empty for them.

When resuming a survey, the language is restored. To support that feature, we
now save the user language for each survey_input which allow us also to add the
following features:
- add a filter allowing survey reviewer to filter survey/answer based on the
survey language.
- print survey in the user language

Technical notes:
- we can't use the language selector of portal as survey doesn't depend on
portal.
- to avoid adding new tours, we test the language selector by modifying the
public tour. We add a step to switch to French and verify that this language is
used during the whole survey.
- we have decided to add the field lang_ids on survey after having tried to
autodetect in which languages a survey is translated. We have given up on that
solution because to be reliable it required to use a sql query and it was a bit
too magical for the user (the language was enabled as soon as one translation
was available as not everything must always be translated. Ex: numbers).

Task-3884012

Part-of: odoo/odoo#165760
Related: odoo/enterprise#79268
Signed-off-by: Florian Charlier (flch) <flch@odoo.com>

--- a/addons/survey/views/survey_survey_views.xml
+++ b/addons/survey/views/survey_survey_views.xml
@@ -60,9 +60,17 @@
                     <group>
                         <group>
                             <field name="user_id" domain="[('share', '=', False)]" widget="many2one_avatar_user"/>
-                            <field name="restrict_user_ids" widget="many2many_tags_avatar"/>
                             <field name="active" invisible="1"/>
                             <field name="has_conditional_questions" invisible="1"/>
+                        </group>
+                        <group>
+                            <field name="restrict_user_ids" widget="many2many_tags_avatar"/>
+                        </group>
+                    </group>
+                    <group>
+                        <group colspan="4">
+                            <field name="lang_ids" widget="many2many_tags" placeholder="All installed languages"
+                                   options="{'no_quick_create': True, 'no_create_edit': True, 'no_open': True}"/>
                         </group>
                     </group>
                     <notebook>
