--- a/addons/survey/views/survey_user_views.xml
+++ b/addons/survey/views/survey_user_views.xml
@@ -25,6 +25,7 @@
                     <filter name="group_by_survey" string="Survey" domain="[]" context="{'group_by': 'survey_id'}"/>
                     <filter string="Email" name="group_by_email" domain="[]" context="{'group_by': 'email'}"/>
                     <filter string="Partner" name="group_by_partner" domain="[]" context="{'group_by': 'partner_id'}"/>
+                    <filter string="Language" name="group_by_lang" domain="[]" context="{'group_by': 'lang_id'}"/>
                 </group>
             </search>
         </field>
@@ -219,6 +220,7 @@
                 <field name="survey_id"/>
                 <group expand="1" string="Group By">
                     <filter name="group_by_survey" string="Survey" domain="[]"  context="{'group_by':'survey_id'}"/>
+                    <filter name="group_by_lang" string="Language" domain="[]" context="{'group_by':'lang_id'}"/>
                     <filter name="group_by_user_input" string="User Input" domain="[]"  context="{'group_by':'user_input_id'}"/>
                 </group>
             </search>
