[IMP] hr_homeworking_calendar : refactoring ux by right
With this commit, if an user doesn't have hr right or can't edit his own
data, he will not able to see delete button or to register a weekly
location.

X-original-commit: 77118722c4cb79e19062742f1660c65016f3769d

--- a/addons/hr_homeworking_calendar/wizard/homework_location_wizard.xml
+++ b/addons/hr_homeworking_calendar/wizard/homework_location_wizard.xml
@@ -10,8 +10,8 @@
                     <div class="o_row w-100">
                         <field name="date"/>
                     </div>
-                    <label for="weekly"/>
-                    <div class="o_row w-100">
+                    <label for="weekly" invisible="not user_can_edit"/>
+                    <div class="o_row w-100" invisible="not user_can_edit">
                         <field name="weekly" class="oe_inline"/>
                         <span class="w-100">
                             Repeat every <field name="day_week_string" class="oe_inline"/>
