[IMP] account: Allow selectable reports in Send&Print
In invoices send and print wizard, this commit allows the user to select for invoice PDF template.
Before this commit, only email template was selectable, and PDF template was hardcoded.

This change was needed to allow some customization when generating an invoice.

task-3879033

--- a/addons/account/wizard/account_move_send_views.xml
+++ b/addons/account/wizard/account_move_send_views.xml
@@ -11,6 +11,7 @@
                 <field name="company_id" invisible="1"/>
                 <field name="move_ids" invisible="1"/>
                 <field name="mode" invisible="1"/>
+                <field name="show_pdf_template_menu" invisible="1"/>
                 <field name="enable_download" invisible="1"/>
                 <field name="enable_send_mail" invisible="1"/>
                 <field name="send_mail_readonly" invisible="1"/>
@@ -27,6 +28,14 @@
                          Sending these invoices will create a gap in the sequence.
                     </div>
                 </div>
+
+                <group>
+                    <field
+                        name="pdf_template_id"
+                        invisible="not show_pdf_template_menu"
+                        class="w-50"
+                        options="{'no_create': True, 'no_edit': True}"/>
+                </group>
 
                 <!-- Options -->
                 <div name="options" class="row">
