[FIX] web_editor: fix the tooltip appearance for draggable snippets
Since [1], a tooltip indicating "This block cannot be dropped anywhere
on this page." appears each time you hover a draggable snippet.

This commit addresses the issue by only showing this tooltip in the
right circumstances, when a snippet is disabled.

[1]: https://github.com/odoo/odoo/commit/91293fe4a8125f65cd7e5f487aacbc62c35c0f74#diff-c971e01f28cfbdec366b6a712c516e3427887fde8a39674e5bb3b5a056cedad0R178

task-3893159

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -385,6 +385,10 @@
                     @include o-position-absolute(8px, 6px, auto, auto);
                 }
 
+                &.o_disabled {
+                    pointer-events: initial;
+                }
+
                 &.o_snippet_install {
                     .btn.o_install_btn {
                         @include o-position-absolute($top: 10px);
@@ -396,6 +400,7 @@
                 }
 
                 &.o_disabled, &.o_snippet_install {
+                    cursor: default;
                     background-color: rgba($o-we-sidebar-blocks-content-snippet-bg, .2);
 
                     .oe_snippet_thumbnail_img {
