--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -984,7 +984,7 @@
                                     <field name="journal_id"
                                            groups="account.group_account_readonly"
                                            options="{'no_create': True, 'no_open': True}"
-                                           readonly="posted_before"/>
+                                           readonly="name and name != '/'"/>
 
                                     <span class="o_form_label mx-3 oe_edit_only"
                                           groups="account.group_account_readonly"
