[IMP] account{,_accountant}: allow grouping by Product (Category) in Deferred reports
We now allow grouping by other fields that account_id in the report,
namely product_id, and product_category_id. However, for the deferral
generation, we continue grouping by account_id.

task-id 3925943

closes odoo/odoo#165592

Related: odoo/enterprise#62534
Signed-off-by: Olivier Colson (oco) <oco@odoo.com>
X-original-commit: fae6ed4d3a748ba5d4da7b01a7f5bf9995d82aaa

--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -322,6 +322,8 @@
                     <field name="account_type"/>
                     <field name="partner_id"/>
                     <field name="journal_id"/>
+                    <field name="product_id"/>
+                    <field name="product_category_id"/>
                     <field name="move_id" string="Journal Entry" filter_domain="[
                         '|', ('move_id.name', 'ilike', self), ('move_id.ref', 'ilike', self)]"/>
                     <field name="tax_ids" />
