[FIX] web_editor, website: consider videos in `s_image_gallery` snippets
Before this commit, the `s_image_gallery` snippet did not consider other
media types besides images. This means that adding videos, icons,... in
the "Images Wall" and "Image Gallery" snippets caused some issues.

Steps to reproduce:
- In edit mode, drop an "Images Wall" snippet.
- Double-click on an image to replace it.
- In the media dialog, go to the "Video" tab and add a video.
=> The image was well replaced by the video.
=> Issue 1: In the right panel, notice that the "Re-Order" option is not
present in the "Video" option section. This is because the `gallery_img`
option only targets images, so the option will never appear for other
medias.
=> Issue 2: Inspect the video and notice that is has no `data-index`
attribute. This means that reordering the other images afterwards will
not produce the expected result.

- Change any option requiring to recompute the mode (e.g. change the
gallery layout by setting the "Mode" option to "Grid").
=> Issue 3: The video disappeared. This is because the code getting the
medias contained in the gallery only selects the images, ignoring the
other types.

- Drop the "Image Gallery" snippet.
- Double-click on an image and replace it by a video.
=> Issue 4: The background image of the corresponding carousel indicator
was not updated.

Note that these steps are the same for icons and documents.

All these issues happen because these snippets were considered to only
accept images as medias (the "Add Images" options indeed only allows
images to be uploaded) but they did not prevent these images to be
replaced by something else.

This commit adds the support needed for these snippets to work correctly
with videos and solves the mentioned issues. Note that the icons and
documents were deliberately ignored, as users are really unlikely to
upload them in a gallery.

More precisely:
- When the mode is recomputed, all images and videos are fetched so none
of them is los

--- a/addons/website/static/src/snippets/s_image_gallery/001.scss
+++ b/addons/website/static/src/snippets/s_image_gallery/001.scss
@@ -78,7 +78,16 @@
                 padding-bottom: 64px;
             }
             ul.carousel-indicators li {
+                position: relative;
                 border: 1px solid #aaa;
+
+                // Play icon for video thumnail indicators.
+                i.o_video_thumbnail {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
             }
             .media_iframe_video {
                 // 70% because the carousel controls are each 15% and the user
